--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "midterm-project",
   "version": "1.0.0",
   "scripts": {
-    "build": "parcel build --public-url Genniesysbracia.github.io/NewYorkTimes src/index.html",
+    "build": "parcel build --public-url https://genniesysbracia.github.io/NewYorkTimes src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
